@@ -295,6 +295,7 @@
               ucar.unidata.io;resolution:=optional,
               ucar.unidata.util;resolution:=optional,
               com.jmatio.io;resolution:=optional,
+	      com.google.gson;resolution:=optional,
               visad;resolution:=optional,
               visad.data;resolution:=optional,
               visad.data.vis5d;resolution:=optional,
@@ -330,6 +331,7 @@
               com.google.common.base;resolution:=optional,
               com.google.common.math;resolution:=optional,
               org.apache.http;resolution:=optional,
+	      org.apache.http.client.utils;resolution:=optional,
               org.joda.time;resolution:=optional,
               org.joda.time.chrono;resolution:=optional,
               org.joda.time.field;resolution:=optional,
